fix(forms/MultiSelectTag): TUI-373 - Scrollbar can't be used with click

--- a/packages/forms/src/UIForm/fields/MultiSelectTag/MultiSelectTag.scss
+++ b/packages/forms/src/UIForm/fields/MultiSelectTag/MultiSelectTag.scss
@@ -16,6 +16,10 @@ $tf-typeahead-input-width: 135px !default;
 	height: auto;
 	padding: 0;
 
+	.focus-manager {
+		flex-grow: 1;
+	}
+
 	&:focus-within {
 		box-shadow: $form-focus-shadow;
 	}
